<resources>
    <string name="app_name">Vitalio</string>
    <string name="vitals">Vitals</string>
    <string name="primary_actions">Primary Actions</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="reminders">Reminders</string>
    <string name="challenges">Challenges</string>
    <string name="chat">Chat</string>
    <string name="login_sign_up">Login/Sign Up</string>
    <string name="enter_uhid_or_mobile_no">Enter UHID or Mobile No</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="terms_conditions_and_privacy_policy"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="by_signing_in_you_agree_to_our">By signing in you agree to our</string>
    <string name="send_otp">Send OTP</string>
    <string name="our_smart_app">Our Smart App!</string>
    <string name="access_your_health_records_and_services">Access your health records and services</string>
    <string name="verification_code_sent_to_your_mobile">Verification code sent to your Mobile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_msg">Let us know about you so we can manage to help you in better ways.</string>
    <string name="skip">Skip</string>
    <string name="back_button">Back Button</string>
    <string name="create_account">Create Account</string>
    <string name="getting_started">Getting Started</string>
    <string name="signup_progress_text">Great start! You\'re just beginning—let’s keep going!</string>
    <string name="welcome_to_vitalio">Welcome to Vitalio.</string>
    <string name="next">Next</string>
    <string name="gender_text">Hi Abhinav, let us know if you are male or female.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="a">A+</string>
    <string name="a_minus">A-</string>
    <string name="b_positive">B+</string>
    <string name="b_minus">B-</string>
    <string name="ab_positive">AB+</string>
    <string name="ab_minus">AB-</string>
    <string name="o_positive">O+</string>
    <string name="o_minus">O-</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="please_enter_your_name_n_enter_the_your_full_legal_name_as_it_appears_on_official_documents">Please enter your name/n Enter the your full legal name as it appears on official documents.</string>
    <string name="enter_current_weight">Enter current weight</string>
    <string name="and_what_is_your_date_of_birth">And what is your date of birth?</string>
    <string name="and_what_is_your_blood_group">And what is your Blood Group?</string>
    <string name="and_what_is_your_height">And what is your height?</string>
    <string name="symptoms_tracker">Symptom Tracker</string>
    <string name="history">History-</string>
    <string name="search_symptom">Search Symptoms i.e. cold, cough-</string>
    <string name="highligh_any_other">Highlight any other symptoms you’re experiencing from the list below.</string>
    <string name="save_and_update_symptoms">Save and Update Symptoms</string>
    <string name="symptom_history">Symptoms History</string>
    <string name="daily"> Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="pills_checklist">Pills Checklist</string>
    <string name="medicine_box">Medicine box</string>
    <string name="pills_for_the_day">Your pills for the day</string>
    <string name="see_timeline">See Timeline</string>
    <string name="menu1">Personal Settings</string>
    <string name="menu2">Device Data History</string>
    <string name="menu3">Support Devices</string>
    <string name="user">User 1</string>
    <string name="user_1">User 2</string>
    <string name="user_3">User 3</string>
    <string name="user_4">User 4</string>
    <string name="user_height">Height</string>
    <string name="user_body_fat">Body Fat</string>
    <string name="user_body_fat_level">Body Fat Level</string>
    <string name="user_body_age">Body Age</string>
    <string name="user_weight">Weight</string>
    <string name="user_stride">Stride</string>
    <string name="user_stride_length">Walking stride length</string>
    <string name="btnstart">Start</string>
    <string name="select_user">Select User</string>
    <string name="saved_devices">Saved Devices</string>
    <string name="device_list">Paired Devices</string>
    <string name="enter_user_details">Personal Settings</string>
    <string name="device_reg_sucess">Device Registration Successful</string>
    <string name="pair_amp_transfer">
<![CDATA[ Pair & Transfer ]]>
</string>
    <string name="connection">Connection</string>
    <string name="DevicePairing">Device Pairing</string>
    <string name="ConnectingDevice">Connecting to device</string>
    <string name="scan">Scan</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="update">Update</string>
    <string name="time_format">Time format : %s HR</string>
    <string name="time_format_12">24 H</string>
    <string name="time_format_24">12 H</string>
    <string name="omron_connected_devices">OMRON Connected Devices</string>
    <string name="time_stamp">Timestamp</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="user_selected">User Selected</string>
    <string name="hyphen">-</string>
    <string name="status">Status</string>
    <string name="Error">Error</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="device_information">Device Information</string>
    <string name="device_disconnected">Device Disconected</string>
    <string name="retry_to_connect">"Press Retry to connect again "</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="Wheeze">Wheeze</string>
    <string name="ErrorNoise">Error Noise</string>
    <string name="ErrorDecreaseBreathingSoundLevel">Error Decrease Breathing Sound Level</string>
    <string name="ErrorSurroundingNoise">Error Surrounding Noise</string>
    <string name="WheezeData">Wheeze Data</string>
    <string name="WeightScaleData">Weight Scale Data</string>
    <string-array name="height_greater">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="height_lower">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="stride_greater">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="stride_lower">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="title_activity_data_listing">Data ListingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="device_connected">Device Connected</string>
    <string name="device_paired">Omron Device Paired Successfully!</string>
    <string name="device_paired_omitted_text">Paired Successfully!</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="update_reminder">Updating Reminder...</string>
    <string name="update_success">Updation Success</string>
    <string name="update_failed">Updation Failed</string>
    <string name="update_settings_sucess">Successfully updated the settings!</string>
    <string name="device_time_format">DeviceTime Format : </string>
    <string-array name="days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="title_activity_listing">ActivityListingActivity</string>
    <string name="bmi">BMI</string>
    <string name="body_age">Body Age</string>
    <string name="title_activity_user_personal_settings">UserPersonalSettingsActivity</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="weight_unit">Weight unit</string>
    <string name="weight_Unit">Weight Unit</string>
    <string name="weight_settings">Weight Settings</string>
    <string name="set">Set</string>
    <string name="user_gender">Gender</string>
    <string name="resting_metabolism">Resting Metabolism</string>
    <string name="skeletal_muscle">Skeletal Muscle</string>
    <string name="visceral_fat">Visceral Fat</string>
    <string name="sequence_number">Sequence Number</string>
    <string name="unsent_data">Unsent Data Number</string>
    <string name="battery_rem">Battery Remaining</string>
    <string name="tru_read_enable">Tru Read Enable</string>
    <string name="tru_read_interval">Tru Read Interval</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="display_pri_body_fat">Display Priority Body Fat</string>
    <string name="display_pri_visceral_fat_lv">Display Priority Visceral Fat Lv</string>
    <string name="display_pri_skeletal_muscle_lv">Display Priority Skeletal Muscle Lv</string>
    <string name="display_pri_resting_metabolism">Display Priority Resting Metabolism</string>
    <string name="display_pri_bmi">Display Priority BMI</string>
    <string name="display_pri_body_age">Display Priority Body Age</string>
    <string name="display_ena_body_fat">Display Enable Body Fat</string>
    <string name="display_ena_visceral_fat_lv">Display Enable Visceral Fat Lv</string>
    <string name="display_ena_skeletal_muscle_lv">Display Enable Skeletal Muscle Lv</string>
    <string name="display_ena_resting_metabolism">Display Enable Resting Metabolism</string>
    <string name="display_ena_bmi">Display Enable BMI</string>
    <string name="display_ena_body_age">Display Enable Body Age</string>
    <string name="time_format_setting">Time Format</string>
    <string name="date_format_setting">Date Format</string>
    <string name="audio_title_permission_required">Permission is required.</string>
    <string name="audio_message_permission">Please tap "Allow" when the audio recording permission dialog appears.</string>
    <string name="audio_message_go_to_settings">Please give permissions on the setting screen.</string>
    <string name="audio_signal_level">SignalLevel (0-5)</string>
    <string name="oxygen_saturation">Oxygen Saturation</string>
    <string name="spo2">SpO2</string>
    <string name="title_activity_support_device_list">SupportDeviceListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
</resources>