<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/our_smart_app"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/bgImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_signup"
        android:backgroundTint="@color/bgcolor_signup"
        app:layout_constraintBottom_toTopOf="@+id/cardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/bgcolor_signup"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code_sent_to_your_mobile"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/greyText"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUhid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_uhid_or_mobile_no"
                android:backgroundTint="@color/edttxt_bg"
                android:background="@drawable/edittext_bg"
                android:inputType="number"
                android:padding="12dp"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btnSendOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_otp"
                android:backgroundTint="@color/bgcolor_signup"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/black"
                android:drawableStart="@mipmap/google_logo"
                android:layout_marginTop="8dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_in_you_agree_to_our"
                android:textSize="10sp"
                android:layout_marginTop="10sp"
                android:textColor="@color/terms_color"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_and_privacy_policy"
                android:textSize="10sp"
                android:textColor="@color/terms_color"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>